List arguments and usage printing.

--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,18 @@
+1.3.0
+======
+- commandr.CommandrUsageException(my_message) can now be raised in a commandr
+  run function to print Usage.
+- commandr.Usage(my_message) can now be called to print the Usage.
+- If an argument has a default that is a list, Commandr will now allow multiple
+  values for that list.
+
 1.2.1
 =======
 - The 'help' command has been added to give either the global help or help on
   a specific command (help [command]).
 - The option 'help_docs' was added to print __main__.__doc__ on help messages.
   It defaults to True.
-- The option main has been added to SetOptions and command() to set a command
+- The option 'main' has been added to SetOptions and command() to set a command
   to get run when no command is supplied. Default is help.
 - The option 'ignore_self' can now be passed in command() to override the global
   value on a per function basis.
